--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  form(method='POST', action='quotes')
-    input(name='quote')
+  form(ng-submit='addQuote(quoteInput)')
+    input(name='quote' ng-model='quoteInput')
     button(type='submit') submit
 
   ul
